Update the buffer reallocation algorithm to account for the arrowBuffers